--- a/res/layout/updateloadbalancer.xml
+++ b/res/layout/updateloadbalancer.xml
@@ -14,9 +14,8 @@
 					android:layout_height="wrap_content" android:paddingLeft="5dip"
 					android:layout_gravity="center_vertical" android:text="Name"
 					android:layout_width="wrap_content" android:textColor="#333"></TextView>
-				<EditText android:layout_height="wrap_content" android:id="@+id/edit_lb_name_text"
-					android:layout_weight="1" android:layout_marginRight="20dip"
-					android:layout_width="wrap_content">
+				<EditText android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginRight="20dip"
+					android:layout_width="wrap_content" android:id="@+id/edit_lb_name_text">
 					<requestFocus></requestFocus>
 				</EditText>
 			</TableRow>
@@ -52,9 +51,8 @@
 					android:layout_height="wrap_content" android:paddingLeft="5dip"
 					android:layout_gravity="center_vertical" android:text="Algorithm"
 					android:layout_width="wrap_content" android:textColor="#333"></TextView>
-				<Spinner android:id="@+id/edit_algorithm_spinner"
-					android:layout_weight="1" android:layout_height="wrap_content"
-					android:layout_marginRight="20dip" android:layout_width="wrap_content"></Spinner>
+				<Spinner android:layout_weight="1" android:layout_height="wrap_content"
+					android:layout_marginRight="20dip" android:layout_width="wrap_content" android:id="@+id/edit_algorithm_spinner"></Spinner>
 			</TableRow>
 			<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center" android:layout_marginTop="10dip" android:layout_marginRight="30dip" android:layout_marginLeft="30dip" android:text="Update Load Balancer" android:id="@+id/update_lb_button"></Button>
 		</TableLayout>
