--- a/res/layout/view_loadbalancer.xml
+++ b/res/layout/view_loadbalancer.xml
@@ -18,7 +18,7 @@
 					<TextView android:layout_width="wrap_content"
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="ID: " android:singleLine="false"
-						android:textStyle="bold" android:textColor="#333" />
+						android:textStyle="bold" android:textColor="#333" android:id="@+id/id_label"/>
 					<TextView android:id="@+id/view_lb_id"
 						android:layout_height="wrap_content" android:layout_width="fill_parent"
 						android:layout_marginRight="30dip" android:scrollHorizontally="true"
