--- a/res/layout/addexternalnode.xml
+++ b/res/layout/addexternalnode.xml
@@ -5,16 +5,12 @@
 	<LinearLayout android:layout_height="wrap_content"
 		android:id="@+id/linearLayout1" android:orientation="vertical"
 		android:layout_width="fill_parent">
-		<TextView android:id="@+id/node_name" android:layout_height="wrap_content"
-			android:layout_width="wrap_content" android:text="CentOS1"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_marginLeft="10dip" android:layout_marginTop="10dip"></TextView>
 		<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:text="IP Address"
 			android:layout_marginLeft="10dip" android:layout_marginTop="10dip"></TextView>
-		<Spinner android:layout_height="wrap_content"
+		<EditText android:layout_height="wrap_content"
 			android:layout_width="fill_parent" android:layout_marginLeft="20dip"
-			android:layout_marginRight="30dip" android:id="@+id/node_ip_spinner"></Spinner>
+			android:layout_marginRight="30dip" android:id="@+id/ip_address"></EditText>
 		<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_marginLeft="10dip"
 			android:text="Port"></TextView>
