--- a/res/layout/editnodes.xml
+++ b/res/layout/editnodes.xml
@@ -21,12 +21,7 @@
 			android:gravity="center_horizontal">
 			<Button android:id="@+id/submit_nodes_button"
 				android:layout_marginBottom="15dip" android:layout_height="wrap_content"
-				android:layout_marginTop="5dip" android:text="Add Selected Nodes"
-				android:layout_width="145dip"></Button>
-			<Button android:layout_marginBottom="15dip"
-				android:layout_height="wrap_content" android:layout_marginTop="5dip"
-				android:id="@+id/add_external_node" android:text="Add External Node"
-				android:layout_width="145dip"></Button>
+				android:layout_marginTop="5dip" android:layout_width="145dip" android:text="Add More Nodes"></Button>
 		</LinearLayout>
 	</RelativeLayout>
 </LinearLayout>
