--- a/res/layout/listservernodecell.xml
+++ b/res/layout/listservernodecell.xml
@@ -1,39 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="horizontal" android:layout_width="fill_parent"
-	android:layout_height="64dip">
-	<ImageView android:id="@+id/icon" android:layout_width="37px"
-		android:paddingLeft="0px" android:paddingRight="0px"
-		android:paddingTop="0px" android:layout_marginRight="10px"
-		android:layout_marginLeft="10px" android:layout_marginTop="13px"
-		android:layout_height="37px" android:src="@drawable/ubuntu_icon" />
-
-	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:orientation="vertical" android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
-
-		<TableRow>
-			<RelativeLayout android:id="@+id/relativeLayout1"
-				android:layout_width="wrap_content" android:layout_height="wrap_content">
-				<CheckBox android:layout_width="wrap_content"
-					android:layout_height="wrap_content" android:layout_centerVertical="true"
-					android:layout_alignParentRight="true" android:layout_marginRight="10dip"
-					android:id="@+id/add_node_checkbox" android:focusable="false"></CheckBox>
-				<TextView android:layout_width="wrap_content" android:id="@+id/label"
-					android:layout_height="wrap_content" android:textSize="24sp"
-					android:textColor="#FFFFFF" android:layout_centerVertical="true"
-					android:layout_alignParentLeft="true" android:layout_marginLeft="16dp"
-					android:layout_toLeftOf="@+id/checkBox1" android:lines="1"></TextView>
-			</RelativeLayout>
-		</TableRow>
-
-		<TableRow>
-			<TextView android:id="@+id/sublabel" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:layout_marginTop="0px"
-				android:textColor="#FFFFFF" android:text="256 server - CentOS 5.3"
-				android:textSize="12sp" />
-		</TableRow>
-	</TableLayout>
+<RelativeLayout android:id="@+id/LinearLayout1" xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
+    <TextView android:textColor="#FFFFFF" android:id="@+id/label" android:layout_height="wrap_content" android:text="Server Name" android:textSize="24sp" android:lines="1" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/add_node_checkbox" android:layout_marginLeft="14dp" android:layout_marginTop="1dip"></TextView>
+    <CheckBox android:id="@+id/add_node_checkbox" android:layout_height="wrap_content" android:focusable="false" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginLeft="16dp"></CheckBox>
+    <TextView android:textColor="#FFFFFF" android:id="@+id/sublabel" android:layout_height="wrap_content" android:text="256 server - CentOS 5.3" android:textSize="12sp" android:layout_width="wrap_content" android:layout_below="@+id/label" android:layout_alignLeft="@+id/label" android:paddingBottom="5dip"></TextView>
 
 
-</LinearLayout>
+</RelativeLayout>
