--- a/res/layout/view_add_loadbalancer.xml
+++ b/res/layout/view_add_loadbalancer.xml
@@ -43,18 +43,18 @@
 						android:layout_width="wrap_content" android:layout_weight="1"
 						android:layout_marginRight="20dip" android:id="@+id/edit_protocol_spinner"></Spinner>
 				</TableRow>
-				<TableRow android:orientation="horizontal"
-					android:layout_height="wrap_content" android:id="@+id/edit_port_layout"
-					android:layout_width="fill_parent">
-					<TextView android:paddingLeft="5dip"
-						android:layout_gravity="center_vertical" android:layout_height="wrap_content"
-						android:layout_width="wrap_content" android:textStyle="bold"
-						android:singleLine="false" android:layout_marginLeft="22dip"
-						android:text="Port"></TextView>
-					<EditText android:layout_height="wrap_content"
-						android:layout_width="fill_parent" android:inputType="number"
-						android:layout_weight="1" android:id="@+id/edit_port_text"
-						android:layout_marginRight="20dip"></EditText>
+				<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/custom_protocol_row">
+					<TextView android:textColor="#333" android:paddingLeft="5dip" android:layout_gravity="center_vertical" android:layout_height="1dip" android:singleLine="false" android:layout_marginLeft="22dip" android:layout_width="wrap_content" android:textStyle="bold"></TextView>
+					<TableLayout android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1">
+						<TableRow android:orientation="horizontal" android:layout_width="fill_parent" android:id="@+id/protocol_sub_row" android:layout_height="wrap_content" android:layout_weight="1">
+							<TextView android:paddingLeft="5dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dip" android:text="Protocol" android:singleLine="false" android:layout_gravity="center_vertical" android:textStyle="bold"></TextView>
+							<Spinner android:layout_marginRight="20dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/edit_protocol_sub_spinner"></Spinner>
+						</TableRow>
+						<TableRow android:orientation="horizontal" android:layout_width="fill_parent" android:id="@+id/port_subrow" android:layout_height="wrap_content" android:layout_weight="1">
+							<TextView android:paddingLeft="5dip" android:layout_height="wrap_content" android:layout_marginRight="5dip" android:text="Port" android:singleLine="false" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:textStyle="bold"></TextView>
+							<EditText android:layout_height="wrap_content" android:inputType="number" android:layout_marginRight="20dip" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/edit_port_text"></EditText>
+						</TableRow>
+					</TableLayout>
 				</TableRow>
 				<TableRow android:orientation="horizontal"
 					android:layout_height="wrap_content" android:id="@+id/edit_vip_layout"
