--- a/res/layout/addexternalnode.xml
+++ b/res/layout/addexternalnode.xml
@@ -16,8 +16,7 @@
 			android:text="Port"></TextView>
 		<EditText android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:inputType="number"
-			android:layout_marginLeft="20dip" android:layout_marginRight="30dip"
-			android:id="@+id/node_port_text">
+			android:layout_marginLeft="20dip" android:layout_marginRight="30dip" android:id="@+id/node_port_text">
 			<requestFocus></requestFocus>
 		</EditText>
 		<TextView android:layout_width="wrap_content" android:id="@+id/TextView01"
@@ -35,8 +34,7 @@
 			android:id="@+id/node_weight_text"></EditText>
 		<Button android:layout_gravity="center_horizontal"
 			android:layout_marginTop="10dip" android:layout_marginBottom="10dip"
-			android:layout_width="120dip" android:text="Submit" android:id="@+id/add_node_button"
-			android:layout_height="wrap_content"></Button>
+			android:layout_width="120dip" android:text="Submit" android:layout_height="wrap_content" android:id="@+id/add_node_button"></Button>
 	</LinearLayout>
 
 </ScrollView>
