--- a/res/layout/addexternalnode.xml
+++ b/res/layout/addexternalnode.xml
@@ -10,7 +10,7 @@
 			android:layout_marginLeft="10dip" android:layout_marginTop="10dip"></TextView>
 		<EditText android:layout_height="wrap_content"
 			android:layout_width="fill_parent" android:layout_marginLeft="20dip"
-			android:layout_marginRight="30dip" android:id="@+id/ip_address"></EditText>
+			android:layout_marginRight="30dip" android:id="@+id/ip_address" android:lines="1" android:scrollHorizontally="true"></EditText>
 		<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_marginLeft="10dip"
 			android:text="Port"></TextView>
