--- a/res/layout/updateloadbalancer.xml
+++ b/res/layout/updateloadbalancer.xml
@@ -15,7 +15,7 @@
 					android:layout_gravity="center_vertical" android:text="Name"
 					android:layout_width="wrap_content"></TextView>
 				<EditText android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginRight="20dip"
-					android:layout_width="wrap_content" android:id="@+id/edit_lb_name_text">
+					android:layout_width="wrap_content" android:id="@+id/edit_lb_name_text" android:lines="1" android:scrollHorizontally="true">
 					<requestFocus></requestFocus>
 				</EditText>
 			</TableRow>
