--- a/res/layout/view_add_loadbalancer.xml
+++ b/res/layout/view_add_loadbalancer.xml
@@ -27,7 +27,7 @@
 						android:text="Name"></TextView>
 					<EditText android:layout_height="wrap_content"
 						android:layout_width="wrap_content" android:layout_weight="1"
-						android:id="@+id/edit_lb_name_text" android:layout_marginRight="20dip">
+						android:id="@+id/edit_lb_name_text" android:layout_marginRight="20dip" android:lines="1" android:scrollHorizontally="true">
 						<requestFocus></requestFocus>
 					</EditText>
 				</TableRow>
