--- a/res/layout/addaccessrule.xml
+++ b/res/layout/addaccessrule.xml
@@ -17,7 +17,7 @@
 		<EditText android:layout_width="fill_parent" android:layout_above="@+id/add_text_file_buttons"
 			android:layout_below="@+id/file_contents_view"
 			android:layout_marginLeft="22dip" android:layout_marginRight="30dip"
-			android:gravity="top" android:id="@+id/rule_address" android:layout_height="100dip"></EditText>
+			android:gravity="top" android:layout_height="100dip" android:id="@+id/rule_address"></EditText>
 		<TextView android:layout_height="wrap_content" android:id="@+id/textView3"
 			android:layout_marginRight="30dip" android:textSize="11dip"
 			android:layout_width="wrap_content" android:layout_marginLeft="22dip" android:text="Enter IP addresses or networks in CIDR notation; separate multiple entries with commas. The network 0.0.0.0/0 can be used to create a rule for all traffic."></TextView>
