--- a/res/layout/list_loadbalancer_item.xml
+++ b/res/layout/list_loadbalancer_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="horizontal" android:layout_width="fill_parent"
 	android:layout_height="64dip">
+    <ImageView android:src="@drawable/deny_rule" android:layout_width="wrap_content" android:layout_height="fill_parent" android:id="@+id/load_balancer_status"></ImageView>
 	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:orientation="vertical" android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
