--- a/res/layout/view_loadbalancer.xml
+++ b/res/layout/view_loadbalancer.xml
@@ -19,10 +19,7 @@
 						android:layout_height="wrap_content" android:layout_marginLeft="22dip"
 						android:paddingLeft="5dip" android:text="ID: " android:singleLine="false"
 						android:textStyle="bold" android:id="@+id/id_label"/>
-					<TextView android:id="@+id/view_lb_id"
-						android:layout_height="wrap_content" android:layout_width="fill_parent"
-						android:layout_marginRight="30dip" android:scrollHorizontally="true"
-						android:gravity="fill_horizontal" android:textColor="#fff" android:layout_marginLeft="22dip" android:textSize="20.0sp" android:textStyle="bold" android:paddingLeft="5dip"/>
+					<TextView android:layout_marginRight="30dip" android:layout_width="fill_parent" android:id="@+id/view_lb_id" android:layout_height="wrap_content" android:scrollHorizontally="true" android:layout_marginLeft="22dip" android:gravity="fill_horizontal" android:textColor="#fff" android:paddingLeft="5dip" android:textSize="20.0sp" android:textStyle="bold"></TextView>
 				</LinearLayout>
 				<!-- Name -->
 				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
