--- a/res/layout/listcontainerobjectcell.xml
+++ b/res/layout/listcontainerobjectcell.xml
@@ -4,6 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="64dip"
     >
+    <ImageView android:src="@drawable/folder" android:layout_width="wrap_content" android:layout_height="fill_parent" android:id="@+id/file_type_image"></ImageView>
         
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
