--- a/res/layout/viewobject.xml
+++ b/res/layout/viewobject.xml
@@ -19,7 +19,7 @@
     android:singleLine="false"
     />
 <HorizontalScrollView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/HorizontalScrollView1" android:layout_marginLeft="22dip" android:layout_marginRight="30dip" android:fadeScrollbars="true">
-    <TextView android:id="@+id/view_container_name" android:layout_width="fill_parent" android:layout_marginLeft="22dip" android:layout_marginBottom="15dip" android:scrollHorizontally="true" android:layout_height="wrap_content" android:gravity="fill_horizontal" android:layout_marginRight="30dip" android:textColor="#fff" android:lines="1" android:textSize="20.0sp" android:textStyle="bold" android:fadeScrollbars="true"></TextView>
+    <TextView android:id="@+id/view_container_name" android:layout_width="fill_parent" android:layout_marginBottom="15dip" android:scrollHorizontally="true" android:layout_height="wrap_content" android:gravity="fill_horizontal" android:layout_marginRight="30dip" android:textColor="#fff" android:lines="1" android:textSize="20.0sp" android:textStyle="bold" android:fadeScrollbars="true"></TextView>
 </HorizontalScrollView>
     
 <!-- File Size  -->
