--- a/res/menu/accounts_list_menu.xml
+++ b/res/menu/accounts_list_menu.xml
@@ -3,7 +3,7 @@
 	<item android:id="@+id/add_account" android:title="New Account" android:icon="@drawable/ic_menu_add"/>
 	<item android:id="@+id/add_password" android:title="Password Lock"
 		android:icon="@drawable/ic_menu_login"></item>
-	<item android:title="Fanitical Support" android:id="@+id/contact_rackspace" android:icon="@drawable/ic_menu_help"></item>
+	<item android:id="@+id/contact_rackspace" android:icon="@drawable/ic_menu_help" android:title="Fanatical Support"></item>
 
 
 </menu>
